Fixed wrapping of buttons in flexibleButtonGroup

--- a/wcfsetup/install/files/style/ui/buttonGroupFlexible.scss
+++ b/wcfsetup/install/files/style/ui/buttonGroupFlexible.scss
@@ -1,5 +1,6 @@
 .flexibleButtonGroup {
 	display: flex;
+	flex-wrap: wrap;
 	
 	> li {
 		display: flex;
